Bug fix: background-clip created extra space between content and border because of partial px in Chrome and Edge. Removed border from selected language, gave both normal and selected languages same height and compensated for the lack of border by increasing the padding by the same amount as the border.

--- a/source/stylesheets/index.scss
+++ b/source/stylesheets/index.scss
@@ -761,6 +761,8 @@ html {
         /* Positioning */
         /* Display and Box model */
         border-color: $black-10;
+        //@include border-box-shadow($black-10, $border-width);
+        height: 2.25rem;
         min-width: calc(#{$column-width} / 2);
         padding: calc(#{$gap-width} / 2) calc(#{$gap-width} / 2) 0.5625rem;
         /* Typography */
@@ -778,10 +780,14 @@ html {
         &.selected {
           /* Positioning */
           /* Display and Box model */
+          //border-color: $black-10;
+          border: none;
           background: $black-10;
-          background-clip: padding-box;
-          color: $black-50;
+          //background-clip: padding-box;
+          height: 2.25rem;
+          padding: calc((#{$gap-width} / 2) + #{$border-width}) calc((#{$gap-width} / 2) + #{$border-width}) calc(0.5625rem + #{$border-width});
           /* Typography */
+          color: $black-50;
           /* Other */
 
           &:hover {
